# Otterball_v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Readme.md  compose.yml  manage.py  pyproject.toml
.github/workflows/: build-image.yml
discord_bot/: admin.py  apps.py  bot.py  constants.py  models.py  tests.py
discord_bot/cogs/: __init__.py  channel_sync.py  emoji_sync.py  guild_sync.py  leaderboard_sync.py  match_ticker.py  poll_creation.py  poll_listener.py  reconciliation.py  remove_garbage.py  role_sync.py
discord_bot/management/commands/: runbot.py
discord_bot/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_activematchmessage_poll_use_fallback_answer_ordering.py
otterball_v2/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
predictions/: admin.py  apps.py  models.py  signals.py  tests.py
predictions/management/commands/: export_point_history.py  get_leaderboard.py  update_points.py
predictions/migrations/: 0001_initial.py  0002_initial.py  0003_poolconfiguration_alter_prediction_unique_together_and_more.py  0004_alter_poolconfiguration_poll_creation_weekdays.py
sports/: admin.py  apps.py  constants.py  models.py  schemas.py  signals.py  tasks.py  tests.py
sports/integrations/: fifa.py
sports/management/commands/: export_db.py  import_db.py  sync_fifa_infra.py
sports/migrations/: 0001_initial.py  0002_alter_stage_stage_type.py
sports/services/: ingestion.py
sports/tests/: __init__.py
sports/tests/fixtures/: competition_17.json  live_match_400021541.json  matches_285023.json  matches_result_types.json  matches_scheduled.json  season_285023.json  stages_285023.json  teams_national.json
users/: admin.py  models.py
users/migrations/: 0001_initial.py
