[project]
name = "otterball-v2"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiolimiter",
    "basedpyright",
    "black",
    "celery",
    "celery-types",
    "discord-py",
    "django",
    "django-celery-beat",
    "django-celery-results",
    "django-redis",
    "django-stubs",
    "gunicorn",
    "httpx2",
    "pillow",
    "psycopg2-binary",
    "pydantic",
    "pyrefly",
    "redis",
    "rich",
    "uuid",
    "whitenoise",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.30.0",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "yamllint>=1.38.0",
]
[tool.black]
target-version = ["py314",]
line_length = 118

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 118

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 80
whitelines = 2
section_whitelines = 1
sequence_style = "flow_style"
